--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 patreon: quick123official
-custom: ['https://afdian.net/@quickredis']
+custom: ['https://paypal.me/quick123pay','https://afdian.net/@quickredis']
