--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
         "global": "^4.4.0",
         "less": "^3.10.3",
         "less-loader": "^5.0.0",
+        "monaco-editor-webpack-plugin": "^5.0.0",
         "node-uuid": "^1.4.8",
         "react": "^16.13.1",
         "react-app-rewired": "^2.1.8",
