--- a/.yarnrc
+++ b/.yarnrc
@@ -6,3 +6,4 @@ electron_mirror "https://npm.taobao.org/mirrors/electron/"
 sqlite3_binary_host_mirror "https://foxgis.oss-cn-shanghai.aliyuncs.com/"
 profiler_binary_host_mirror "https://npm.taobao.org/mirrors/node-inspector/"
 chromedriver_cdnurl "https://cdn.npm.taobao.org/dist/chromedriver"
+yarn-offline-mirror 
