--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
         "run-electron": "^1.0.0",
-        "terminal-in-react": "^4.3.1"
+        "terminal-in-react-quick123": "^4.3.5"
     },
     "browserslist": {
         "production": [
