--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 
   # After registering a name on build.snapcraft.io, commit an uncommented line:
-  # name: quickredis
+  name: quickredis
   version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
   summary: Single-line elevator pitch for your amazing snap # 79 char long summary
   description: |
