--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "QuickRedis",
     "version": "2.6.2",
+    "license": "MIT",
     "private": true,
     "description": "QuickRedis",
     "author": "https://quick123.net/",
